# advent-of-code

./: .gitignore
data/example_output/: day_01.txt  day_03.txt  day_05.txt  day_07.txt  day_10.txt  day_11.txt
python/: day_01.py  main.py  pyproject.toml
python/day_01/: main.py
python/day_02/: main.py
python/day_03/: main.py
python/day_04/: main.py
python/day_05/: main.py
python/day_07/: main.py
python/day_08/: main.py
python/day_09/: main.py  main_old.py
python/day_10/: main.py
python/day_11/: main.py
python_one_liners/day_01/: day_01.py
python_one_liners/day_02/: day_02.py
python_one_liners/day_03/: day_03.py  day_03_alt.py
python_one_liners/day_04/: day_04.py
rust/src/: main.rs
rust/src/day_01/: main.rs
rust/src/day_03/: main.rs
rust/src/day_04/: main.rs
