[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Advent of Code 2022 Solutions"
authors = ["astrojosh <joshmorrow@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
